# httpie-shinkansen

./: README.md  pyproject.toml
httpie_shinkansen/: __init__.py  signer.py
